<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:orientation="vertical">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_user" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/string_usuario_login"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="90dp"
            android:layout_gravity="center"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:paddingLeft="5dp"
            android:background="@drawable/edit_text_border"/>

        <EditText
            android:id="@+id/txtpasswrd"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/string_passwrd_login"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_baseline_lock_open_24"
            android:drawablePadding="10dp"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_border"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pass_forgotten"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulse_aqui"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:autoLink="phone"
                    />
        </LinearLayout>

        <TextView
            android:id="@+id/txtMsgError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_user_login"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:textColor="#CD6363"
            android:visibility="invisible"
            android:textSize="10dp"
            android:textStyle="bold"
            android:autoLink="phone"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:text="@string/button_singin"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/button_login"/>


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:text="@string/button_singup"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/button_login"/>



</LinearLayout>